--- a/style.css
+++ b/style.css
@@ -1,30 +1,79 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.btn {
+    text-transform: capitalize;
+    padding: 0.5rem;
+    cursor: pointer;
+    border: none;
+    transition: all 0.3s ease;
+}
+
 body {
     width: 100vw;
     height: 100vh;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
+    background-color: #6d8b74;
+}
+
+.btn.show-modal {
+    background-color: #d0c9c0;
+    box-shadow: -2px 5px 10px rgb(95, 113, 97);
+    z-index: -2;
+}
+
+.btn.show-modal:not(:last-child) {
+    margin-right: 1rem;
+}
+
+.btn.close-modal {
+    width: 1.8rem;
+    height: 1.8rem;
+    border-radius: 50%;
+    background-color: #c9c3bb;
+}
+
+.btn.close-modal:hover {
+    background-color: #a5a099;
 }
 
 .modal {
-    width: 15rem;
-    height: 15rem;
+    position: absolute;
+    top: 35%;
+    left: 30%;
+    width: 20rem;
+    height: auto;
+    display: none;
     background-color: #fff;
     border: 1px solid #ccc;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     padding: 1rem;
-    transform: translateY(-120%);
-    opacity: 0;
+    transform: scale(0);
     transition: all 0.4s ease-in-out;
 }
 
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    transform-origin: 0 50%;
+    margin-bottom: 1.5rem;
+    font-size: 1.3rem;
+    text-transform: capitalize;
+}
+
 .backdrop {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.3);
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     display: none;
+    transition: all 0.4s ease-in-out;
 }
